--- a/chan.tt
+++ b/chan.tt
@@ -21,8 +21,8 @@
 /al wihand {/if {$hashand==0}{unwi all}}
 /al wiw wistaff
 /al wih wihand
-/al hh {exert mheal}
-/al hhto {exert heal %0}
+/al hh {exert gheal}
+/al hhto {exert gheal %0}
 /ac {^  √金刚杵(Jade)}{/var hashand 0;/var hasstaff 1} 
 /ac {^你拿出一根乌黑的金刚杵握在手中}{/var hashand 0;/var hasstaff 1} 
 /ac {^你松开了手中的}{/var hasstaff 0} 
@@ -102,7 +102,7 @@
 /gag {^（你上一个动作还没有完成}
 /gag {^todo}
 /ac {^可是什么事情都没有发生}{fff}
-/al wpet {order wear all;order wield blade}
+/al wpet {order wear all;order wield blade;order team with xxl}
 /var haspet 0
 /ac {^一只小小小小宠物}{/var haspet 1}
-/al wh {/var haspet 0;l xxc;/delay {0.5}{/if {$haspet==0}{whistle}}}
+/al wh {/var haspet 0;l xxc;/delay {0.6}{/if {$haspet==0}{whistle;order team with xxl}}}
