--- a/immortal.tt
+++ b/immortal.tt
@@ -1,6 +1,7 @@
 #config {TINTIN CHAR} /
 /var myname immortal
-/session $myname china.fengyun.com 6000
+/nop session $myname china.fengyun.com 6000
+/session $myname 122.200.77.32 6000
 /ac {^请选择您使用的内码}{0}
 /ac {^您的英文名字：} {$myname}
 /al reload {/read $myname.tt}
