--- a/fate.tt
+++ b/fate.tt
@@ -1,7 +1,7 @@
 #config {TINTIN CHAR} /
 /var myname fate 
-/session $myname sh.fengyun.com 6666
 /nop session $myname fy.hbisp.com 3333
+/session $myname fy.sysfon.com 6000
 /al tchat {/ticker {checkchat}{/if {$is_kill==0 && $is_walk==0}{checkchat}}{120}}
 /al ntchat {/unticker {checkchat}}
 /act {^请选择您使用的内码}{0}
