--- a/hard.tt
+++ b/hard.tt
@@ -4,7 +4,10 @@
 /nop session $myname fy.hbisp.com 3333
 /nop session $myname 117.135.143.81 6666
 /nop session $myname 203.81.26.60 6000
-/session $myname china.fengyun.com 6000
+/nop session $myname china.fengyun.com 6000
+/nop session $myname 122.200.77.32 6000
+/nop fy.sysfon.com (124.193.186.169)
+/session $myname fy.sysfon.com 6000
 /al tchat {/ticker {checkchat}{/if {$is_kill==0 && $is_walk==0}{checkchat}}{120}}
 /al ntchat {/unticker {checkchat}}
 /act {^请选择您使用的内码}{0}
