--- a/immortal.tt
+++ b/immortal.tt
@@ -1,7 +1,7 @@
 #config {TINTIN CHAR} /
 /var myname immortal
 /nop session $myname china.fengyun.com 6000
-/session $myname 122.200.77.32 6000
+/session $myname fy.sysfon.com 6000
 /ac {^请选择您使用的内码}{0}
 /ac {^您的英文名字：} {$myname}
 /al reload {/read $myname.tt}
@@ -129,3 +129,4 @@
 /al jiamoshang {exert xinyuan}
 /al jiaxueshang {exert juedai}
 /ac {【ＱＳＴ。】 %1     （20）}{jiamoshang}
+/al ffy {recall back;w;n;e;e;e;n;u}
