--- a/shaman.tt
+++ b/shaman.tt
@@ -17,8 +17,10 @@
 /ac {^  帝王谷%0护士(Nurse)}{give nurse silver;tget 30 silver}
 /var hasstaff 0
 /var hashand 0
+/var hasblade 0
 /al wistaff {/if {$hasstaff==0}{unwi all;wi staff}}
 /al wihand {/if {$hashand==0}{unwi all;wi jade}}
+/al wiblade {/if {$hasblade==0}{wi blade;wi hu-blade;wi futou}}
 /al wiw wistaff
 /al wih wihand
 /ac {^  √%1taff)}{/var hasstaff 1;/var hashand 0} 
@@ -27,11 +29,12 @@
 /ac {^你将手上的戒指藏入}{/var hashand 0} 
 /ac {^你把%0紧紧地握在手中}{/var hashand 0;/var hasstaff 1} 
 /al buff {i;perform dodge.gouweixudiao}
+/al lx {wiblade;perform yipianlianxin}
 /al xl {wihand;perform xianglongwuhui}
 /al sc {wihand;perform shichengliulong}
 /var islian 0
 /ac {^你双手猛然一抖一拢}{pj;/var hashand 1;/var hasstaff 0;/var islian 0} 
-/al ki {wihand;set target %0;buff;/delay {2}{juji %0;kill %0;startk}}
+/al ki {wiblade;set target %0;buff;/delay {2}{kill %0;startk}}
 /ac {^你对著%0！今日不是你死就是我活！} {iskill;startk}
 /nop ------------
 /var xl_max 0
@@ -39,7 +42,8 @@
 /var zjbl_ok 0
 /al ak xl
 /al kkx {/ticker {kill}{/if {$zjbl_ok==1}{zjbl}{ak}}{2.1}}
-/al startk {xl;/al ak xl;kkx}
+/nop al startk {xl;/al ak xl;kkx}
+/al startk {lx;/ticker {kill}{lx}{4.4}}
 /al kx startk
 /al ssk startk
 /ac {^你将降龙十八掌的十八式融会贯通，幻出十八个掌影一连击向%1的十八处要害}{
@@ -92,20 +96,12 @@
 /ac {^『降龙无悔』只能对战}{stopk;cks}
 /ac {^『时乘六龙』只能对战}{stopk;cks}
 /ac {^『震惊百里』只能对战}{stopk;cks}
-/ac {^『雨后初虹』只能对战斗}{/if {$is_kill==1}{stopk;cks}}
-/ac {^『清辉』只能对战斗}{/if {$is_kill==1}{stopk;cks}}
-/ac {^『连天衰草』只能对战斗}{/if {$is_kill==1}{stopk;cks}}
-/ac {^『阴陵扣命』只能对战斗}{/if {$is_kill==1}{stopk;cks}}
-/ac {^『风漏飞烟』只能对战斗}{/if {$is_kill==1}{stopk;cks}}
-/ac {^『无空漩流』只能对战斗}{stopk;cks}
-/ac {^『红藕香残』只能对战斗}{/if {$is_kill==1}{stopk;cks}}
-/ac {^『七星伴月』只能对战斗}{/if {$is_kill==1}{stopk;cks}}
 /ac {^你的法力太低}{hp}
 /nop ac {^( 你似乎十分疲惫，看来需要好好休息了}{hh;/delay {2}{hh}}
 /ac {^( 你头重脚轻，正在勉力支撑著不倒下去)}{exert qi;/delay {1}{exert qi}}
 /ac {^( 你摇头晃脑、歪歪斜斜，濒于晕倒}{/al ak bzj;exert qi;/delay {3}{exert qi;hp}}
 /ac {^( 你已经陷入半昏迷状态，神智全失}{sk}
-/ac {^你所选用的武功中没有这种必杀技。}{get jade;get staff}
+/ac {^你所选用的武功中没有这种必杀技。}{get blade;get futou}
 /read gag.sc
 /read path.sc
 /read normal.sc
@@ -132,3 +128,4 @@
 }
 /read autorecover.sc
 /al qq {fox;quest}
+/al ffy {recall back;w;n;e;e;e;n;u}
