--- a/nurse.tt
+++ b/nurse.tt
@@ -2,7 +2,8 @@
 /var myname nurse
 /nop session $myname sh.fengyun.com 6666
 /nop session $myname fy.hbisp.com 3333
-/session $myname china.fengyun.com 6000
+/nop session $myname china.fengyun.com 6000
+/session $myname fy.sysfon.com 6000
 /al tchat {/ticker {checkchat}{/if {$is_kill==0 && $is_walk==0}{checkchat}}{120}}
 /al ntchat {/unticker {checkchat}}
 /act {^请选择您使用的内码}{0}
