--- a/zen.tt
+++ b/zen.tt
@@ -2,8 +2,9 @@
 /var myname chan
 /nop session $myname sh.fengyun.com 6666
 /nop session $myname 117.135.143.81 6666
-/session $myname china.fengyun.com 6000
+/nop session $myname china.fengyun.com 6000
 /nop session $myname fy.hbisp.com 3333
+/session $myname fy.sysfon.com 6000
 /al tchat {/ticker {checkchat}{/if {$is_kill==0 && $is_walk==0}{checkchat}}{120}}
 /al ntchat {/unticker {checkchat}}
 /act {^请选择您使用的内码}{0}
