--- a/wandao.tt
+++ b/wandao.tt
@@ -12,7 +12,7 @@
 /ac {^重新连线完毕。}{/cr;/ticker {noidle}{hehe}{280}}
 /ac {^#SESSION '%0' DIED.}{/read %0.tt}
 /ac {^#SESSION '%0' ACTIVATED.}{/read %0.tt}
-/ac {^【新手】} {/line log ../chat-$myname.log }
+/ac {^【新手】} {/line log ../chat-wandao.log }
 /al wpet {order wear all;order wield ironfist}
 /al reload {/read wandao.tt}
 /var haspet 0
@@ -21,60 +21,75 @@
 /al scorep {score xwd}
 /al skillsp {skills xwd}
 /al hpp {wlk;expp;hp xwd;nwlk}
-/var hasstaff 0
-/var hashand 0
 /var hasblade 0
-/var hashammer 0
-/al wistaff {/if {$hasstaff==0}{unwi all;wi staff}}
+/var hasanqi 0
+/ac {^你抽出一把明晃晃的圆月弯刀}{/var hasblade 1;/var hasanqi 0}
+/ac {^你装备%0棋子作武器}{/var hasblade 0;/var hasanqi 1}
+/ac {^你放下手中的圆月弯刀}{/var hasblade 0}
+/ac {^你放下手中的%0棋子}{/var hasanqi 0}
+/ac {^  √圆月弯刀(jade2)}{/var hasblade 1;/var hasanqi 0}
+/ac {^  √%0(go piece)}{/var hasblade 0;/var hasanqi 1}
 /al wihand {/if {$hashand==0}{unwi all;wi jade}}
-/al wiblade {/if {$hasblade==0}{wi blade;wi hu-blade;wi futou}}
-/al wihammer {wi hammer}
-/al wiw wistaff
-/al wih wihand
-/ac {^你从怀中摸出一对戒}{/var hashand 1;/var hasstaff 0} 
-/ac {^你将手上的戒指藏入}{/var hashand 0} 
-/ac {^你把%0紧紧地握在手中}{/var hashand 0;/var hasstaff 1} 
-/read moonbuff.sc
+/al wiblade {wi jade;/if {$hasblade==0}{unwi piece;unwi needle;wi jade2}}
+/al wianqi {wi jade;/if {$hasanqi==0}{unwi jade2;wi needle;wi piece}}
+/read moonbuff_hc.sc
 /nop al buff {wi yue;wi all;bf1;/delay {4.1}{bf2;bf3;bf4;bf5;bf6;bf7;bf8}}
-/al buff {wi jade;bf1;wi jade2;/delay {4.1}{bf2;bf3;bf4;bf5;bf6;bf7;bf8}}
+/al buff {my;bf1;/delay {4.1}{bf2;bf6;bf7}}
 /nop al buff {wi jade;wi jade2;bf2;bf3;bf4;bf5;bf6;bf7;bf8}
 /al lx {wiblade;perform yipianlianxin}
 /al xl {wihand;perform xianglongwuhui}
 /al sc {wihand;perform shichengliulong}
 /var islian 0
-/al ki {wi jade;wi jade2;set target %0;buff;/delay {4.1}{kill %0}}
-/ac {^你对著%0！今日不是你死就是我活！} {iskill;startk}
+/al ki {do i,hp,unwield jade,wield jade;wiblade;
+        set target %0;
+        buff;
+        /delay {4.1}{
+            /if {$shaqi >0}{bg}{ld};
+            kill %0;
+                    }
+        }
+/al k {unwi jade2;perform finger.dian}
+/ac {^你对著%0！今日不是你死就是我活！} {de2 iskill;}
 /nop ------------
-/var xl_max 0
-/var sc_ok 0
-/var zjbl_ok 0
-/al ak xl
-/al kkx {/ticker {kill}{/if {$zjbl_ok==1}{zjbl}{ak}}{2.1}}
-/al startk {;}
-/al kx startk
-/al ssk startk
-/al czj {wistaff;perform chuozijue}
-/al bzj {wistaff;perform banzijue}
-/al tzj {wistaff;perform tiaozijue}
-/al yzj {wistaff;perform yinzijue}
-/al zjbl {wihand;perform zhenjingbaili}
-/al ps bzj
+/al ps {/showme  === auto pf ===}
+/al startk {
+        iskill;
+        /ticker {kill}{
+            ps;
+            wk
+            }{12.2}
+            }
+/nop 『棋盘切』（gobankiri）
+/nop 『百鬼夜狂』（hyakki）
+/al bg {do enable blade ittouryu,set secon_perform hyakki}
+/al qie {do enable blade ittouryu,set secon_perform gobankiri}
+/al my {do enable blade chillblade,set secon_perform mingyue}
+/al ld {do enable blade chillblade,set secon_perform leidianjiaohon}
+/al wk {perform wukongxuanliu}
 /ac {^你乍然退步，旋身，反手}{
     iskill;
-    set secon_perform leidianjiaohong;
-    /delay {240}{set secon_perform mingyue}
+    de2 cks;
+    de4 {/showme {------shaqi=$shaqi};/if {$shaqi>0}{bg}{ld}};
     }
+/ac {^你突然仰天长嚎}{
+    iskill;
+    do unwield jade2,wield needle,wield piece;
+    de2 cks;
+    de4 {/showme {------shaqi=$shaqi};/if {$shaqi>0}{bg}{my}};
+}
+/al stopk {nokill;/unticker {kill}}
 /ac {^你的法力太低}{hp}
 /ac {^( 你头重脚轻，正在勉力支撑著不倒下去)}{exert qi;/delay {1}{exert qi}}
 /ac {^( 你摇头晃脑、歪歪斜斜，濒于晕倒}{wh;exert qi;/delay {3}{exert qi;hp}}
 /ac {^( 你已经陷入半昏迷状态，神智全失}{;}
-/ac {^你所选用的武功中没有这种必杀技。}{get jade;wi jade;get jade2;wi jade2}
+/ac {^你所选用的武功中没有这种必杀技。}{;}
+/ac {^『无空漩流』只能对战}{sk}
 /read gag.sc
 /read path.sc
 /read normal.sc
 /read quest.sc
 /read status.sc
-/log o $myname.log
+/log o ../wandao.log
 /al hxdazuo {exercise 300;hh;/delay {2.1}{dazuo}}
 /al hx {drink dai}
 /al hs {drink dai}
@@ -95,6 +110,11 @@
 /read autorecover_hc.sc
 /al qq {quest}
 /al ffy {recall back;w;n;e;e;e;n;u}
-/ac {^任务被你完}{j}
+/ac {^任务被你完}{wk}
 /al eatall {gb meat;drink dai;de2 {eat meat}}
-/ac {^看起来%0想杀死你！}{wi jade;wi jade2;/var knpc_name %0;iskill}
+/ac {^看起来%0想杀死你！}{
+            wi jade;
+            /var knpc_name %0;
+            iskill
+                         }
+/al wim {do unwield jade2,wield needle,wield piece,wield jade}
